# embedded-sl-demo

./: README.md  compose.yaml  dev.compose.yaml  lefthook.yaml
server/: .dockerignore  .gitignore  Dockerfile  compose.yaml  dev.compose.yaml  pyproject.toml
server/src/: app.py  clickhouse.py  db.py  dependencies.py  models.py  out_models.py  settings.py
server/src/auth/: __init__.py  dependencies.py  models.py  models_out.py  router.py
server/src/metrics/: __init__.py  models_out.py  router.py
ui/: .env  Dockerfile  compose.yaml  dev.compose.yaml  eslint.config.js  index.html  package-lock.json  package.json
ui/src/: index.css  main.tsx  router.tsx
ui/src/api/: client.ts  context.tsx  hook.ts  util.ts
ui/src/api/types/: metrics.ts  queries.ts  users.ts
ui/src/auth/: client.ts  context.tsx  hook.ts  types.ts
ui/src/clients/: auth.ts
ui/src/components/: MetricsDisplay.css  MetricsDisplay.tsx  Modal.css  Modal.tsx
ui/src/components/aside/: Aside.css  Aside.tsx
ui/src/components/navbar/: Navbar.css  Navbar.tsx
ui/src/components/viz/: LineChart.css  LineChart.tsx
ui/src/contexts/: AuthContext.tsx
ui/src/hooks/: auth.ts
ui/src/metrics/: client.ts  context.tsx  hook.ts  types.ts
ui/src/pages/: App.css  App.tsx  LoggedInApp.css  LoggedInApp.tsx  Login.css  Login.tsx
ui/src/shared/: http.ts
ui/src/state/: user.ts
ui/src/types/: auth.ts
